# covid

./: .gitignore  Cargo.toml  README.md  install.sh  rust-toolchain.toml  rustfmt.toml
src/: cli.rs  core.rs  main.rs
