[package]
name = "covid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive", "cargo"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
indicatif = "0.17.8"
rand = "0.8.5"
subprocess = "0.2.9"
